--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -26,8 +26,8 @@
     <string name="Account.balance">Saldo</string>
     <!-- Delisted token alert banner message -->
     <string name="Account.delistedToken">Denne værdikupon er fjernet fra listen, da udstederen har valgt at stoppe ERC20-support. \n\nDu kan muligvis stadig sende disse værdikuponer til en anden platform. Se vores hjælpeside for mere information.</string>
-    <!-- $10000 per ECA -->
-    <string name="Account.exchangeRate">%1$s per %2$s</string>
+    <!-- $10000 per BTC -->
+    <string name="Account.exchangeRate">%1$s BTC per %2$s</string>
     <!-- Loading Wallet Message -->
     <string name="Account.loadingMessage">Indlæser pung</string>
     <!-- Default wallet name -->
