--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -26,8 +26,8 @@
     <string name="Account.balance">Guthaben</string>
     <!-- Delisted token alert banner message -->
     <string name="Account.delistedToken">Dieses Token wurde dekotiert, weil der Aussteller beschlossen hat, den ERC20 Support einzustellen.\n\nSie mögen immer noch in der Lage sein, diese Token an eine andere Plattform zu senden.  Für weitereDetails, besuchen Sie unsere Support Seite.</string>
-    <!-- $10000 per ECA -->
-    <string name="Account.exchangeRate">%1$s pro %2$s</string>
+    <!-- $10000 per BTC -->
+    <string name="Account.exchangeRate">%1$s BTC pro %2$s</string>
     <!-- Loading Wallet Message -->
     <string name="Account.loadingMessage">Wallet wird geladen</string>
     <!-- Default wallet name -->
