--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -27,7 +27,7 @@
     <!-- Delisted token alert banner message -->
     <string name="Account.delistedToken">발행자가 ERC20 지원을 중단하기로 결정했기 때문에 이 토큰은 목록에서 제외되었습니다. \n\n하지만 이 토큰을 다른 플랫폼으로 보낼 수는 있습니다. 자세한 내용은 지원 페이지를 방문하십시오.</string>
     <!-- $10000 per BTC -->
-    <string name="Account.exchangeRate">%2$s 당 %1$s</string>
+    <string name="Account.exchangeRate">%2$s BTC 당 %1$s</string>
     <!-- Loading Wallet Message -->
     <string name="Account.loadingMessage">지갑 로딩</string>
     <!-- Default wallet name -->
